// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonWithImage: Рендерится без ошибок 1`] = `
<div
  className="sc-bxivhb dUiVDW"
>
  <button
    className="mxzgdr-0 iklZWm"
    size="large"
  >
    <div
      className="sc-1jxwge6-0 wterhv-0 lePFiI"
      width="100%"
    >
      <div
        className="sc-1jxwge6-0 wterhv-0 BIsEB"
      >
        Button
      </div>
    </div>
  </button>
</div>
`;

exports[`ButtonWithImage: Рендерится с иконкой слева 1`] = `
<div
  className="sc-bxivhb dUiVDW"
>
  <button
    className="mxzgdr-0 iklZWm"
    size="large"
  >
    <div
      className="sc-1jxwge6-0 wterhv-0 lePFiI"
      width="100%"
    >
      <div
        className="sc-1jxwge6-0 wterhv-0 BIsEB"
      >
        <svg
          data-file-name="SvgPlayMonocolor"
        />
      </div>
      <div
        className="sc-1jxwge6-0 wterhv-0 BIsEB"
      >
        Button
      </div>
    </div>
  </button>
</div>
`;

exports[`ButtonWithImage: Рендерится с иконкой справа 1`] = `
<div
  className="sc-bxivhb dUiVDW"
>
  <button
    className="mxzgdr-0 iklZWm"
    size="large"
  >
    <div
      className="sc-1jxwge6-0 wterhv-0 lePFiI"
      width="100%"
    >
      <div
        className="sc-1jxwge6-0 wterhv-0 BIsEB"
      >
        Button
      </div>
      <div
        className="sc-1jxwge6-0 wterhv-0 BIsEB"
      >
        <svg
          data-file-name="SvgPlayMonocolor"
        />
      </div>
    </div>
  </button>
</div>
`;
